# carbio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  README  conanfile.py  serial_port_unix.cpp
.qtcreator/: project.json.qtds
cli/: CMakeLists.txt  admin_authenticator.cpp  admin_authenticator.h  audit_logger.cpp  audit_logger.h  auth_types.h  controller.cpp  controller.h  main.cpp  profile_manager.cpp  profile_manager.h  radialbar.cpp  radialbar.h  security_types.h  sensor_command.h  sensor_command_queue.h  sensor_worker.cpp  sensor_worker.h  session_manager.cpp  session_manager.h
cmake/: Init.cmake
cmake/Modules/: CCache.cmake  CPack.cmake  Paths.cmake
cmake/Toolchains/: toolchain-armv8.cmake
examples/: CMakeLists.txt  fingerprint_manager.cpp  print_helper.h
include/carbio/: assert.h  baud_rate_setting.h  command_code.h  command_executor.h  command_serializer.h  command_traits.h  data_length_setting.h  device_info.h  device_setting_index.h  device_setting_info.h  endian.h  error.h  fingerprint.h  fingerprint_sensor.h  floating_point.h  led_color_setting.h  led_mode_setting.h  locked_buffer.h  match_query_info.h  packet.h  packet_id.h  profile_store.h  protocol_handler.h  result.h  search_query_info.h  security_level_setting.h  serial_port.h  status_code.h
include/carbio/.hidden/: .fingerprint_NEW.h
include/carbio/.hidden/internal/fingerprint/: packet.h  packet_deserializer.h  packet_serializer.h  protocol_handler.h  result.h
include/carbio/.hidden/internal/io/: event_loop.h  serial_port.h  task.h
include/carbio/core/: assert.h
include/carbio/fingerprint/: baud_rate_setting.h  command_code.h  command_executor.h  command_serializer.h  command_traits.h  device_info.h  device_setting_index.h  device_setting_info.h  fingerprint_sensor.h  led_color_setting.h  led_mode_setting.h  match_query_info.h  packet.h  packet_data_length_setting.h  packet_id.h  protocol_handler.h  result.h  search_query_info.h  security_level_setting.h  status_code.h
include/carbio/io/: handle.h  handle_traits.h  serial_port.h
include/carbio/utility/: blocking_queue.h  cpu_hints.h  endian.h  floating_point.h  locked_buffer.h  lockfree_triple_buffer.h  secure_value.h  spinlock.h
qml/: AdminFingerprintDialog.qml  AdminPasswordDialog.qml  AuthPrompt.qml  ClearConfirmDialog.qml  DeleteDialog.qml  EnrollDialog.qml  FindFingerprintDialog.qml  FingerprintSetupDialog.qml  Gauge.qml  IdentifyFingerprintDialog.qml  InfoDialog.qml  LEDControlDialog.qml  QueryDialog.qml  SystemConfigDialog.qml  Toast.qml  UnauthorizedAccessWarning.qml  VerifyDialog.qml  main.qml  qml.qrc
qml/components/: ProgressRing.qml
qml/components/atoms/: AnimatedRing.qml  CheckmarkCanvas.qml  CountdownTimer.qml  FingerprintRidges.qml  LockIcon.qml  ProgressCanvas.qml  StatusDot.qml  XMarkCanvas.qml
qml/components/composites/: AuthProgress.qml  FeedbackDisplay.qml  FingerprintScanner.qml  LockoutDisplay.qml
res/: res.qrc
src/: CMakeLists.txt  baud_rate_setting.cpp  command_code.cpp  command_executor.cpp  command_traits.cpp  data_length_setting.cpp  descriptor.h  descriptor_traits.h  descriptor_traits_unix.h  device_info.cpp  device_setting_index.cpp  device_setting_info.cpp  endian.cpp  fingerprint.cpp  fingerprint_sensor.cpp  led_color_setting.cpp  led_mode_setting.cpp  match_query_info.cpp  packet.cpp  packet_id.cpp  profile_store.cpp  protocol_handler.cpp  result.cpp  search_query_info.cpp  security_level_setting.cpp  serial_port.cpp  serial_port_unix.cpp  serial_port_unix.h  status_code.cpp
src/.hidden/: fingerprint_NEW.cpp  fingerprint_workflows_NEW.cpp
src/.hidden/fingerprint/: protocol_handler.cpp
src/.hidden/io/: event_loop.cpp  serial_port.cpp
src/fingerprint/: device_info.cpp  device_setting_info.cpp  fingerprint_sensor.cpp  match_query_info.cpp  packet.cpp  protocol_handler.cpp  search_query_info.cpp
src/io/: serial_port.cpp
tests/integration/: CMakeLists.txt  serial_port_tests.cpp  test_main.cpp
tests/unit/: CMakeLists.txt  serial_port_mock.h  serial_port_tests.cpp  test_main.cpp
